# hatchery

./: LICENSE  README.md
agents/: .example-env  README.md  default.json  hierarchical_agent_teams.ipynb  idea.txt  map_example.json  pyproject.toml  requirements.txt  testing.py
agents/src/agents/: callbacks.py  crew.py  main.py  marketing_agents.py  marketing_tasks.py  test.py
agents/src/agents/config/: agents.yaml  tasks.yaml
agents/src/agents/simulations/2025-01-11 18:37:53/: copywriting.json  market_research.md  movement.json  visual-content.md
agents/src/agents/simulations/2025-01-11 18:44:47/: copywriting.json  market_research.md  movement.json  visual-content.md
agents/src/agents/simulations/2025-01-11 18:50:27/: copywriting.md  market_research.md  movement.json  visual-content.md
agents/src/agents/simulations/2025-01-11 18:56:19/: copywriting.md  market_research.md  movement.json  visual-content.md
agents/src/agents/simulations/2025-01-11 20:37:29/: copywriting.md  market_research.md  movement.json  visual-content.md
agents/src/agents/simulations/2025-01-11 21:11:32/: copywriting.md  market_research.md  movement.json  requirements.md  visual-content.md
agents/src/agents/simulations/2025-01-11 21:22:14/: copywriting.md  market_research.md  movement.json  requirements.md  visual-content.md
agents/src/agents/simulations/2025-01-11 22:39:09/: caption.md  movement.json  requirements.md
agents/src/agents/simulations/firstnew/: coding_plan.md  (+2 more)
agents/src/agents/tools/: search.py
agents/src/agents/twitter/: legacy.py  twitter.py
server/: index.js  (+2 more)
(+17 files in other folders)
